feat: POST `v1/registry` to create new model registries.
